yamls/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
# apiVersion: networking.k8s.io/v1beta
# kind: Ingresses
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: demo-argocd-nginx-ingress
  namespace: demo-argocd
spec:
  rules:
  - host: demoargocd.rancher.epicshit.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: nginx
          servicePort: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - demoargocd.rancher.epicshit.io
    secretName: demo-argocd-ingress-cert
